--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.16.6",
     "react": "15.3.2",
     "react-native": "0.37.0",
+    "react-native-swiper": "^1.5.3",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
