--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-storage": "^0.1.4",
     "react-native-swiper": "^1.5.3",
+    "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^3.0.0",
     "react-native-viewpager": "^0.2.13",
     "react-redux": "^4.4.5",
