--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.16.6",
     "react": "15.3.2",
     "react-native": "0.37.0",
+    "react-native-datepicker": "^1.4.3",
     "react-native-grid-view": "^0.4.1",
     "react-native-modal": "^0.4.0",
     "react-native-modalbox": "^1.3.8",
