--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "dependencies": {
     "buffer": "^5.0.1",
     "lodash": "^4.16.6",
-    "react": "15.3.2",
-    "react-native": "0.37.0",
+    "react": "^15.4.2",
+    "react-native": "^0.40.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-datepicker": "^1.4.3",
     "react-native-grid-view": "^0.4.1",
     "react-native-modal": "^0.4.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-parallax-scroll-view": "^0.19.0",
+    "react-native-shadow": "git+https://github.com/879479119/react-native-shadow.git",
     "react-native-storage": "^0.1.4",
     "react-native-swiper": "^1.5.3",
     "react-native-tab-navigator": "^0.3.3",
