--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "buffer": "^5.0.1",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-native": "^0.40.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-check-box": "^1.0.4",
     "react-native-datepicker": "^1.4.3",
     "react-native-grid-view": "^0.4.1",
     "react-native-modal": "^0.4.0",
