--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-native": "^0.40.0",
+    "react-native-actionsheet": "^2.0.5",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-check-box": "^1.0.4",
     "react-native-datepicker": "^1.4.3",
