--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-modal": "^0.4.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-parallax-scroll-view": "^0.19.0",
+    "react-native-popover": "github:jeanregisser/react-native-popover#8a443d2699b404d55c324edc8536255150340789",
     "react-native-shadow": "git+https://github.com/879479119/react-native-shadow.git",
     "react-native-storage": "^0.1.4",
     "react-native-swiper": "^1.5.3",
